# changes file for ldap3
# generated on 2017-05-03 06:32:04.046619
# version 2.2.4

- 2.2.4 not yet released
    - leading and trailing spaces in server name don't raise exception anymore
    - DitContentRule is properly read from the schema
    - added validator for Active Directory timestamp
    - Mock strategies raise an exception if a non-bytes value is added to the schema when no offline schema is provided (str and int are automatically converted)
    - added custom_validators property to Mock strategies

- 2.2.3 2017.04.30
    - abstraction layer query converts int values to string (thanks dgadmin)
    - CaseInsensitiveDictWithAlias doesn't raise an exception anymore if alias is set multiple times to the same key
    - friendly names in AttrDef are properly managed when performing commits in Writer cursors
    - no more errors when server returns an empty schema (thanks Glen)
    - range attributes in entries are properly recognized when auto_range is False
    - fixed random errors in auto_range searches (thanks James)
    - fixed checking of malformed schema
    - added configuration parameter IGNORE_MALFORMED_SCHEMA to not raise exception for servers that don't follow the LDAP RFCs (defaults to False)
    - test config moved to test/config.py
    - testcase_id generated randomly for each test
    - added ATTRIBUTES_EXCLUDED_FROM_OBJECT_DEF parmeter to exclude some attribute from automatic populate of ObjectDef in Abstract Layer (helpful for AD)
    - added IGNORED_MANDATORY_ATTRIBUTES_IN_OBJECT_DEF parmeter to exclude some attribute from mandatory attribute list in ObjectDef in Abstract Layer (helpful for AD)
    - fixed error when using implicit assigning in WritableEntry
    - added LDAPInvalidValueError Exception
    - in Python 3 byte filter are converted to unicode before parsing
    - RESPONSE_DN_ENCODING parameter renamed to ADDITIONAL_ENCODINGS