@@ -77,7 +77,7 @@ class Test(unittest.TestCase):
         self.assertFalse(connection.bound)
 
     def test_bind_sasl_digest_md5_to_secondary_sasl_user(self):
-        if test_server_type != 'AD':
+        if test_server_type not in ['AD', 'SLAPD']:
             connection = get_connection(bind=False, authentication=SASL, sasl_mechanism=DIGEST_MD5, sasl_credentials=(test_sasl_realm, test_sasl_user, test_sasl_password, None))
             connection.open()
             connection.bind()
